--- a/projetomain.css
+++ b/projetomain.css
@@ -38,6 +38,7 @@
     justify-content: center;
    
 }
+/* ^^^^^^ ILUMINAÇÃO */
 
 .multi{
     background-color: black;
@@ -72,6 +73,7 @@
     justify-content: center;
   
 }
+/* ^^^^^^ MULTIMIDIAS */
 
 .a1{
     padding-right: 1em;
@@ -118,6 +120,7 @@
     height: 248px;
     width: 349px;
 }
+/* ^^^^^^ IMAGENS INDIVIDUAIS ILUMINAÇÃO */
 
 .m1{
     width: 250px;
@@ -136,6 +139,7 @@
     height: 220px;
     padding: 1em;
 }
+/* IMAGENS MULTIMIDIAS */
 
 @media (max-width: 1024px) {
 
